assets/css/styles.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
    box-sizing: border-box;
}

/*
  2. Remove default margin
*/
* {
    margin: 0;
    padding: 0;
}

/*
  Typographic tweaks!
  3. Add accessible line-height
  4. Improve text rendering
*/
body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    min-height: 100vh;
}

/*
  5. Improve media defaults
*/
img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
}

/*
  6. Remove built-in form typography styles
*/
input,
button,
textarea,
select {
    font: inherit;
}

/*
  7. Avoid text overflows
*/
p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

/*
  8. Create a root stacking context
*/
#root,
#__next {
    isolation: isolate;
}

/*
  9. Remove default button styles
*/
button {
    background: none;
    border: none;
    cursor: pointer;
}

/*
  10. Remove default list styles
*/
li {
    list-style: none;
}

/*
  11. Remove default anchor styles
*/

a {
    display: inline-block;
    color: inherit;
    text-decoration: none;
}


:root {
    --primary_color: #4C0000;
    --secondary_color: #F7572D;
    --primary_text_color: #F9F7B2;
    --secondary_text_color: #FFFFFF;
    --accent_color_active: #F7572D;
    --accent_color_inactive: #f7552dae;
    --accent_color_focus: ;


    /* heading font-size */
    --min-heading-font-size: 1.5rem;
    --preferred-heading-font-size: 2.5vw;
    --max-heading-font-size: 2rem;

    /* paragraph font-size */
    --min-text-font-size: 0.875rem;
    --preferred-text-font-size: 1.5vw;
    --max-text-font-size: 1.125rem;


    /* large heading font-size */
    --min-large-font-size: 2rem;
    --preferred-large-font-size: 4vw;
    --max-large-font-size: 3rem;

    --min-giga-font-size: 4rem;
    --preferred-giga-font-size: 5vw;
    --max-giga-font-size: 5rem;

    --min-extra-giga-font-size: 5rem;
    --preferred-extra-giga-font-size: 6vw;
    --max-extra-giga-font-size: 6rem;

    --min-mega-font-size: 3.5rem;
    --preferred-mega-font-size: 4.375vw;
    --max-mega-font-size: 4.375rem;

    --min-kilo-font-size: 3rem;
    --preferred-kilo-font-size: 3.75vw;
    --max-kilo-font-size: 3.75rem;

    --br-1: 0.5em;
    --br-2: 0.75em;
    --br-3: 1em;
    --br-4: 1.25em;
    --br-5: 1.5em;
    --br-6: 1.75em;

    --padding_small: 0.5em;
    --padding_medium: 1em;
    --padding_large: 1.5em;
    --padding_xlarge: 2em;

    --margin_small: 0.5em;
    --margin_medium: 1em;
    --margin_large: 1.5em;
    --margin_xlarge: 2em;

    --gap_small: 0.5em;
    --gap_medium: 1em;
    --gap_large: 1.5em;
    --gap_xlarge: 2em;

}

body {
    font-size: var(--preferred-font-size);
    color: var(--primary_text_color);
    background-color: var(--primary_color);
    font-family: 'Manrope', sans-serif;
}


section {
    margin-inline: auto;
    padding-inline: var(--padding_large);
}

h2 {
    font-size: clamp(var(--min-giga-font-size), var(--preferred-giga-font-size), var(--max-giga-font-size));
    font-weight: 400;
    font-family: 'cormorant', serif;
}

h3 {
    font-size: clamp(var(--min-heading-font-size), var(--preferred-heading-font-size), var(--max-heading-font-size));
    font-weight: 400;
    font-family: 'cormorant', serif;
}

p {
    font-size: clamp(var(--min-text-font-size), var(--preferred-text-font-size), var(--max-text-font-size));
    font-weight: 400;
}

/* Menu */
#main_nav {
    display: flex;
    justify-content: end;
    align-items: center;
    padding: var(--padding_medium);
    /* backdrop-filter: blur(10px); */
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 100;

}

/* hero section */

#intro {
    width: 100%;
    height: 100vh;
    padding: 0;
    margin-bottom: var(--margin_large);
}

.intro_image_wrapper {
    overflow: hidden;
    position: relative;
    z-index: -1;
    margin-bottom: var(--margin_xlarge);
}

.intro_image_wrapper img {
    height: 100vh;
    object-fit: cover;
}

.intro_text_wrapper {
    position: absolute;
    top: 20%;
    left: 38%;
    transform: translate(-50%, -50%);
}

.intro_text_wrapper h1 {
    font-size: clamp(var(--min-large-font-size), var(--preferred-large-font-size), var(--max-large-font-size));
    font-family: 'cormorant', serif;
    line-height: 1.2;
    text-transform: capitalize;
}

.intro_skills_2_col_grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: var(--gap_large);
    align-items: center;
    padding: var(--padding_large);
    position: absolute;
    bottom: 10%;
    left: 38%;
    z-index: 10;
}


/* about */

.about_text_wrapper {
    width: 24rem;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: var(--gap_large);
    margin-bottom: var(--margin_xlarge);
}

.about_text {
    color: #FFF;
    font-family: Manrope;
    font-size: 1.25rem;
    font-style: normal;
    font-weight: 400;
    line-height: 1.8125rem;
}

.about_text_wrapper h4 {
    font-size: clamp(var(--min-extra-giga-font-size), var(--preferred-extra-giga-font-size), var(--max-extra-giga-font-size));
    text-align: center;
    letter-spacing: 0.18rem;
    margin-top: var(--margin_small);
}


/* Accordion */

.accordion {
    margin: 20px auto;
}

.accordion_item {
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

.accordion_item .accordion_content {
    display: none;
}

.accordion_item.show .accordion_content {
    display: block;
}

.accordion_title {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: var(--padding_small) 0;
    text-align: left;
    font-size: clamp(var(--min-heading-font-size), var(--preferred-heading-font-size), var(--max-heading-font-size));
    font-weight: 600;
    border-bottom: 1px solid #ddd;
}

.accordion_title::after {
    content: '\02795';
    font-size: clamp(var(--min-heading-font-size), var(--preferred-heading-font-size), var(--max-heading-font-size));
    color: var(--secondary_text_color, #FFF);
}

.accordion_text {
    padding: var(--padding_small) 0;
    font-size: clamp(var(--min-text-font-size), var(--preferred-text-font-size), var(--max-text-font-size));
    text-transform: uppercase;
}

.accordion_content {
    padding: 15px;
    display: none;
}

.accordion_img {
    max-width: 100%;
    height: auto;
    margin-top: 15px;
}

/* slider */

#resume {
    margin: var(--margin_xlarge) auto;
}

.slider {
    position: relative;
    overflow: hidden;
}

.slides {
    display: flex;
    scroll-snap-type: x mandatory;
    overflow-x: scroll;
}

.slides::-webkit-scrollbar {
    display: none;
}

.slide {
    flex: 0 0 auto;
    width: 100%;
    scroll-snap-align: start;
    padding: var(--padding_xlarge);
    margin-bottom: var(--margin_xlarge);
}

.slide h3 {
    font-size: clamp(var(--min-heading-font-size), var(--preferred-heading-font-size), var(--max-heading-font-size));
    font-weight: 400;
    font-family: 'Manrope', sans-serif;
    margin-bottom: var(--margin_medium);
}

.slide h4 {
    font-size: clamp(var(--min-text-font-size), var(--preferred-text-font-size), var(--max-text-font-size));
    font-weight: 400;
    font-family: 'Manrope', sans-serif;
    margin-bottom: var(--margin_small);
}

.slide li {
    font-size: clamp(var(--min-text-font-size), var(--preferred-text-font-size), var(--max-text-font-size));
    font-weight: 300;
    font-family: 'Manrope', sans-serif;
    margin-bottom: var(--margin_small);
}

.circles {
    position: absolute;
    bottom: 10px;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    gap: 10px;
}


.circle {
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background: var(--accent_color_inactive);
}

.circle.active {
    transition: opacity 0.5s ease-in-out;
    opacity: 1;
    background: var(--accent_color_active);
}



/* footer */

footer {
    margin: var(--margin_xlarge) auto;
    padding: var(--padding_large);
}

.outro_text,
.cta_text {
    font-size: clamp(var(--min-text-font-size), var(--preferred-text-font-size), var(--max-text-font-size));
    font-weight: 300;
    margin-bottom: var(--margin_small);
}

.cta {
    font-size: clamp(var(--min-text-font-size), var(--preferred-text-font-size), var(--max-text-font-size));
    font-weight: 400;
    margin-bottom: var(--margin_large);
    border-bottom: #F9F7B2 1px solid;
}

.footer_links ul {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: var(--gap_large);
    margin-bottom: var(--margin_xlarge);
}

.footer_links ul li {
    font-size: clamp(var(--min-text-font-size), var(--preferred-text-font-size), var(--max-text-font-size));
    padding: var(--padding_medium) 0;
    border-bottom: #F9F7B2 1px solid;
}

#contact div {
    text-align: center;
    font-size: clamp(var(--min-text-font-size), var(--preferred-text-font-size), var(--max-text-font-size));
    margin-top: var(--margin_xlarge);
}


/* media queries */

@media screen and (min-width: 768px) {}

@media screen and (min-width: 1024px) {


    main {
        padding: var(--padding_large);
    }

    .intro_text_wrapper {
        width: 40rem;
        top: 20%;
        left: 28%;
        transform: translate(-50%, -50%);
    }

    .intro_text_wrapper h1 {
        font-size: 6rem;
    }

    .intro_skills_2_col_grid {
        top: 40%;
        left: 50%;
        right: 0;
    }

    .about_text_wrapper {
        width: 40rem;
        }

    .about_text_wrapper h4 {
        font-size: 8rem;
    }


    .accordion_item {
        flex-direction: row;
        align-items: flex-start;
        justify-content: center;
        gap: var(--gap_large);
    }

    .accordion_title,
    .accordion_content {
        flex: 1;
    }

    .accordion_img {
        max-width: none;
        margin-top: 0;
        margin-left: 15px;
    }

    .slider {
        width: 70%;
        margin: 0 auto;
    }

    .slide h3 {
        font-size: clamp(var(--min-kilo-font-size), var(--preferred-kilo-font-size), var(--max-kilo-font-size));
    }

    .slide h4 {
        font-size: clamp(var(--min-text-font-size), var(--preferred-text-font-size), var(--max-text-font-size));
    }

    .slide li {
        font-size: clamp(var(--min-text-font-size), var(--preferred-text-font-size), var(--max-text-font-size));
    }

    .footer_links {
        margin-bottom: 15rem;
        margin-top: var(--margin_xlarge);
    }

    .footer_links ul {
        flex-direction: row;
        justify-content: space-between;
        gap: var(--gap_large);
    }

    .footer_links ul li {
        width: 100%;
    }

}

